test/bad/var_def_later.dws
void main() {
	int a = 666
	printn(b + 13)
	int b = 13
}
